app/assets/stylesheets/shared_elements.scss
/* ... */
// Tools/actions menu hidden until item is clicked/tapped
.tools {
  position: absolute;
  right: 0;
  top: 0;
  background: $pane1 image-url("sprite.png") 0 0 no-repeat;
  width: 32px;
  height: 21px;
  border: 1px solid $lightergrey;
  @include border-radius(2px);
  &:hover {
    cursor: pointer;
    background: $pane2 image-url("sprite.png") 0 -20px no-repeat;
  }
  ul {
    @include list-reset;
    right: 0;
    top: 20px;
    position: absolute;
    width: 180px;
    background: white;
    @include border-radius(2px);
    border: 1px solid $lightergrey;
    padding: 6px;
    display: none;
    z-index: 100;
  }
  &.reveal ul {
    display: block;
  }
}

article:hover > menu.tools, header:hover > menu.tools {
  right: 0;
}

ul.thread-list {
  @include list-reset-soft;
  margin: 20px 0;
  border-top: 3px solid $grey;
  li {
    padding: 20px 0;
    border-bottom: 3px solid $grey;
    overflow: hidden;
    .item-content {
      margin: 0 30px 0 0;
      float: left;
      width: 390px;
      h4 {
        margin: 3px 0 10px 0;
      }
    }
    .status {
      width: 25%;
      float: left;
      color: $grey2;
      .following {
        width: 50%;
        display: inline-block;
        vertical-align: top;
        font-size: 11px;
        font-weight: bold;
        color: $darkgreen;
        text-transform: uppercase;
        img {
          vertical-align: middle;
        }
      }
      .thread_subscription {
        width: 40%;
        display: inline-block;
        vertical-align: top;
      }
      form {
        li.input_action {
          padding-top: 5px;
          border-bottom: none;
        }
      }
    }
    &.car-parking {
      padding-left:42px;
      background: image-url("map-icons/m-car-parking.png") 0 20px no-repeat;
    }
    &.cycle-parking {
      padding-left:42px;
      background: image-url("map-icons/m-cycle-parking.png") 0 20px no-repeat;
    }
    &.cycle-path {
      padding-left:42px;
      background: image-url("map-icons/m-cycle-path.png") 0 20px no-repeat;
    }
    &.misc {
      padding-left:42px;
      background: image-url("map-icons/m-misc.png") 0 20px no-repeat;
    }
    &.obstruction {
      padding-left:42px;
      background: image-url("map-icons/m-obstruction.png") 0 20px no-repeat;
    }
    &.planning {
      padding-left:42px;
      background: image-url("map-icons/m-planning.png") 0 20px no-repeat;
    }
    &.roadworks {
      padding-left:42px;
      background: image-url("map-icons/m-roadworks.png") 0 20px no-repeat;
    }
    .permissions {
      float:right;
    }
  }
}

.meta {
  p {
    font-size: 12px;
    color: $lightgrey;
    margin-bottom: 8px;
  }
  a,
  span {
    color: $grey2;
  }
}

.permissions {
  width: 80px;
  color: $lightgrey;
  text: {
    align: right;
    transform: uppercase;
  }
  font: {
    size: 11px;
    weight: bold;
  }
}



#page aside#sidebar section.map {
  padding: 10px;
}


.minimap {
  position: relative;
  padding: 0 10px;
  height: 210px;
}
.map img {
  display:block;
}
.map-tools {
  position: absolute;
  right: 0;
  bottom: 0;
  display: block;
  background: $white;
  padding: 5px 0 0 5px;
  button {
    display: block;
    float: left;
    width: 27px;
    height: 27px;
    border: none;
    text-indent: -999999px;
    &.person {
      margin-right: 5px;
      background: image-url("sprite.png") -3px -130px no-repeat;
      &:hover {
        background-position: -43px -130px;
      }
    }
    &.zoom {
      background: image-url("sprite.png") -3px -180px no-repeat;
      &:hover {
        background-position: -43px -180px;
      }
    }
  }
}

.tip,
form.guided .tip {
  position: absolute;
  right: -290px;
  top: 0;
  z-index: 20;
  width: 220px;
  padding: 20px;
  background: $black;
  h4 {
    color: $grey;
  }
  p {
    color: $grey;
    font-weight: normal;
    line-height: 10px;
  }
  .close {
    position: absolute;
    top: 10px;
    right: 10px;
    padding:0;
  }
  .nub {
    display: block;
    width: 24px;
    height: 20px;
    position: absolute;
    left: -24px;
    top: 20px;
    background: image-url("sprite.png") -44px -261px no-repeat;
  }
}

#overlay, div.dialog {
  @include border-radius(5px);
  width: 640px;
  background: white;
  border: 1px solid black;
  padding: 8px;
  > a.close {
    float: right;
    right: 8px;
  }
}

// Missing translation
body.development span.translation_missing {
  text-decoration: underline;
  color: red;
}


.image-scroller {
  border: 1px solid $paneborder;
  overflow:hidden;
  @include border-radius(0 0 10px 10px);
  .image-scroller-wrap {
    height:200px;
    overflow:hidden;
  }
  footer {
    height:33px;
    overflow:hidden;
    background:$pane1;
    @include border-radius(0 0 9px 9px);
    p {
      margin:7px 10px 0 10px;
      float:left;
      color:$grey2;
      font: {
        style:italic;
        size:12px;
      }
    }
    menu {
      float:right;
      a {
        float:left;
        border-left:1px solid $paneborder;
      }
    }
  }
}

ul.group-threads-list {
  li {
    span {
      display: block;
      float: left;
      width: 16px;
      height: 16px;
      border: 2px solid $lightergrey;
      margin: 0 10px 0 0;
    }
    &.green span {
      background: $green;
    }
    &.blue span {
      background: $blue;
    }
    &.red span {
      background: $red;
    }
  }
}

ul.content-icon-list {
  @include list-reset-soft;
  li {
    padding-left:30px;
    background:image-url("content-icons.png") 0 3px no-repeat;
    &.image {
      background-position:0 3px;
    }
    &.cal {
      background-position:0 -104px;
    }
    &.link {
      background-position:0 -216px;
    }
    &.library_note {
      background-position:0 -326px;
    }
    &.map-point {
      background-position:0 -436px;
    }
    &.library_document {
      background-position:0 -548px;
    }
  }
}
/* ... */

